--- a/app/global.css
+++ b/app/global.css
@@ -1,7 +1,7 @@
 @import 'tailwindcss';
 
 ::selection {
-  background-color: #47a3f3;
+  background-color: green;
   color: #fefefe;
 }
 
@@ -84,7 +84,7 @@ html {
 }
 
 .prose p {
-  @apply my-4 text-neutral-800 dark:text-neutral-200;
+  @apply my-4 text-neutral-800 dark:text-neutral-200 ;
 }
 
 .prose h1 {
@@ -92,7 +92,7 @@ html {
 }
 
 .prose h2 {
-  @apply text-xl font-medium tracking-tight mt-6 mb-2;
+  @apply text-2xl font-medium tracking-tight mt-6 mb-2;
 }
 
 .prose h3 {
@@ -148,3 +148,5 @@ table {
 .title {
   text-wrap: balance;
 }
+
+/* Override Fraunces for specific elements */
